Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41042

REG [5.2-5.3] iOS: Text cursor deletes text from wrong position

XMLWordPrintable

    • iOS/tvOS/watchOS

      Run attached example.

      1. Click into the TextEdit somewhere to the right of 'some'. The virtual keyboard will appear and the cursor will be at the end of 'some'.
      2. Hit the light-grey Rectangle. It will invoke TextInsert::insertQTextCursor() to insert 'xxxxText' using QTextCursor -> cursor blinks at the end of 'xxxxText'
      3. Hit delete on the virtual keyboard -> cursor jumps to the last 'x' and deletes it.

      It should delete from the end (cursor blinking position) and not from the middle of the text.

      After investigation found that change https://qt.gitorious.org/qt/qtbase/commit/7eb8b67c8bc8e69b3dd6fb39dde09ac36f56e538 cause the issue.

        1. QTBUG-41042.zip
          29 kB
          Qt Support
        For Gerrit Dashboard: QTBUG-41042
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes